# battery-cycles

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
src/battery_cycles/: __main__.py  config.py
src/battery_cycles/cli/: main.py
src/battery_cycles/cli/commands/: cheatsheet.py  collect.py  completions.py  health.py  history.py  init.py  install_cron.py  sessions.py  status.py  top.py
src/battery_cycles/collector/: battery_reader.py  data_collector.py  session_detector.py
src/battery_cycles/database/: connection.py  models.py
src/battery_cycles/utils/: time_utils.py  unit_conversions.py
